<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_deployment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="8dp"
    android:orientation="vertical"
    tools:context=".DeploymentActivity">

    <LinearLayout
        android:id="@+id/layout_gamemode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <View
        android:layout_width="match_parent"
        android:background="@android:color/black"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/fragment_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <TextView
            android:id="@+id/roomIdTextView"
            android:layout_width="154dp"
            android:layout_height="37dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Copy Id" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deployment_options"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <Button
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:onClick="onClickReset"
                android:text="@string/deployment_reset" />

            <Switch
                android:id="@+id/switch_rotation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/deployment_rotation_mode" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/myBoardViewLayout"
        android:layout_width="wrap_content"
        android:layout_height="309dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <view
            android:id="@+id/myBoardViewDeployment"
            class="com.example.battleships.DeploymentBoardView"
            android:layout_width="311dp"
            android:layout_height="265dp"
            android:layout_weight="1"
            android:textAlignment="center" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/deployLayout">

        <Button
            android:text="@string/deployment_deploy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnDeploy"
            android:layout_weight="1"
            android:enabled="false"
            />

        <TextView
            android:text="@string/deployment_remaining_ships"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textDeployStatus"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

</LinearLayout>
