<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="45sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/holo_red_dark" />

        <Button
            android:id="@+id/btnProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Profile"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btnSingOut"
            android:layout_width="376dp"
            android:layout_height="44dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="27dp"
            android:text="@string/SignOut"
            app:layout_constraintBottom_toTopOf="@+id/buttonFind"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewCopy"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextFind"
            android:layout_width="376dp"
            android:layout_height="44dp"
            android:layout_marginEnd="26dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewOr"
            app:layout_constraintEnd_toStartOf="@+id/buttonFind"
            app:layout_constraintStart_toEndOf="@+id/textViewOr" />

        <Button
            android:id="@+id/btnFind"
            android:layout_width="376dp"
            android:layout_height="44dp"
            android:layout_marginEnd="66dp"
            android:layout_marginBottom="171dp"
            android:text="@string/Find"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextFind"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_out" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewLobbyId"
            android:layout_width="376dp"
            android:layout_height="44dp"
            android:text=""
            app:layout_constraintBottom_toTopOf="@+id/buttonStatistics"
            app:layout_constraintEnd_toStartOf="@+id/imageViewCopy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="376dp"
            android:layout_height="44dp"
            android:text="Create" />
    </LinearLayout>


</LinearLayout>
