<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameActivity">

    <LinearLayout
        android:id="@+id/layout_network_game_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_network_game_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_network_small_board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_network_own_board"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/game_own_board"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <com.example.battleships.NetworkBoardView
                    android:id="@+id/board_view_network_small"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_network_game_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_network_restart"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:onClick="onClickRequestRestart"
                    android:text="Request Restart"
                    tools:ignore="OnClick" />

                <Switch
                    android:id="@+id/switch_network_sound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/game_menu_sound"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_network_turn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/game_turn"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="normal|bold|italic" />

                    <TextView
                        android:id="@+id/text_network_current_player"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Opponent"
                        android:textColor="@color/colorAccent"
                        android:textSize="24sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_network_opponent_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:orientation="vertical">

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/text_network_opponent_board"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_opponent_board"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <com.example.battleships.NetworkBoardView
            android:id="@+id/board_view_network_big"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</RelativeLayout>
